data/derived/sp14/progs/unify/prog4350.ml.out
Characters 82-84:
  sin(eval e0)
           ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
